# other

./: .gitignore  1.1_Descriptives.ipynb
.ipynb_checkpoints/: 1.1_Descriptives-checkpoint.ipynb
BCE/: szam_fa.ipynb  szamrendszeres.ipynb
BCE/Data_science/: .gitignore  2_Cell_Tower_optimization.ipynb
BCE/Data_science/data/: output_20200426214825.csv
BCE/Python/: 1_Olimpia.ipynb  6_osztalyok.ipynb  7_numpy.ipynb  8.3_feladat.csv  8.3_feladat.xlsx  8_adatvizualizacio.ipynb  wakannai_monthly_mean_daily_max_temperature.csv  zh_a.ipynb  zh_b.ipynb
BV-Group/: 3_-_Data_discovery.ipynb  6_-_Modeling.ipynb  README.md  pyproject.toml
BV-Group/output/: gradient_boosting_churn_model_20260610.pkl
KLM/: gender_pay_gap_analysis.ipynb
Market_analysis/: README.md  pyproject.toml
Market_analysis/docs/: presentation.pptx
Market_analysis/src/: app.py
Market_analysis/src/core/: agent.py
Market_analysis/src/prompts/: system_prompt.txt
Market_analysis/src/tools/: base.py  news_reader.py  stock_reader.py
Market_analysis/src/utils/: config_reader.py  histogram_draw.py
Market_analysis/tests/: 1_stock_and_news_reader.ipynb  news_reader_test.py  stock_reader_test.py
TheDataIncubator/: facebook_data.ipynb
bce/: .mapbox_token  1_Time_series_analysis.ipynb  2_Cell_Tower_optimization.ipynb  2_Store_location_optimization.ipynb
bce/.ipynb_checkpoints/: 1_Time_series_analysis-checkpoint.ipynb
bce/data/: active_customers.csv
bce/html/: index.html  slovakia.html
sankey/: index.html
schrodinger/: Running_insight.ipynb  pyproject.toml
(+3 files in other folders)
