[project]
name = "bv-group"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.20"
dependencies = [
    "ipykernel>=7.2.0",
    "keras==2.15.0",
    "matplotlib>=3.10.9",
    "pandas==2.1.4",
    "numpy==1.26.4",
    "pyarrow>=24.0.0",
    "scikit-learn>=1.3.2",
    "tensorflow==2.15.1",
    "tqdm>=4.68.1",
    "shap>=0.49.1",
    "setuptools>=82.0.1",
    "optuna>=4.9.0",
]
